connect to threejs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-<audio id="audioElement" src="./media/MiyaGi_bada_boom.mp3"></audio>
+<audio id="audioElement" src="./media/coco.mp3"></audio>
 <div id="controls">
     <button onclick="document.getElementById('audioElement').play()">Play the Audio</button>
     <button onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
@@ -22,6 +22,10 @@
     </div>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.min.js"></script>
+<script src="src/js/lib/CanvasRenderer.js"></script>
+<script src="src/js/lib/Projector.js"></script>
 <script src="src/js/main.js"></script>
+<script src="src/js/dots.js"></script>
 </body>
 </html>
