--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-<audio id="audioElement" src="./media/coco.mp3"></audio>
+<audio id="audioElement" src="./media/hajime.mp3"></audio>
 <div id="controls">
     <button onclick="document.getElementById('audioElement').play()">Play the Audio</button>
     <button onclick="document.getElementById('audioElement').pause()">Pause the Audio</button>
